...
}

object TopBarComponentTestTags {
    private const val P = "TOP_BAR_COMPONENT_"
    private const val S = "_TEST_TAG"

    const val OPEN_DRAWER_ICON_BUTTON = "${P}OPEN_DRAWER_ICON_BUTTON$S"
    const val SETTINGS_ICON_BUTTON = "${P}SETTINGS_ICON_BUTTON$S"
    const val SETTINGS_DROP_DOWN_MENU = "${P}SETTINGS_DROP_DOWN_MENU$S"

    private const val SDDMI = "SETTINGS_DROP_DOWN_MENU_ITEM_"

    const val FINGER_TRACED_LINES = "${P}${SDDMI}FINGER_TRACED_LINES$S"
    const val FINGER_TRACED_LINES_TRAILING_ICON = "${P}${SDDMI}FINGER_TRACED_LINES_TRAILING_ICON$S"
    const val APPROXIMATED_SHAPE = "${P}${SDDMI}APPROXIMATED_SHAPE$S"
    const val APPROXIMATED_SHAPE_TRAILING_ICON = "${P}${SDDMI}APPROXIMATED_SHAPE_TRAILING_ICON$S"
}

